# python-docker

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py  github_actions.py  run.py
