[tool.poetry]
name = "python-docker"
version = "0.1.0"
description = ""
authors = ["Matheus Batista <mbatista.sarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
